--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
     </div>
 
-    <h2 class="welcome"> Welcome to KMUF coaching and Mentorship <P>
-        Training 2024 Edition
+    <h2 class="welcome"> Welcome to KMUF coaching and  <P>
+        Mentorship Training 2024 Edition
     </P></h2>
 
 
     <h2 class="goal">Goal Setting <br> &
         <br> Achievement </h2>
     
-<button class="exp"><a href="">
-        Click to explore</a></button>
+<button class="exp"><a href="./kmu.pptx" download="donwload">
+        Click to to download</a></button>
     
     <br>
 <button class="form"><a href="https://docs.google.com/forms/d/e/1FAIpQLSd75moO26rjeUZcK-eEjZ5DvoAYuL_g3z0JBsgKfDUQxdRHgg/viewform?usp=sf_link">
